src/objects/Failure_Modes__c/Failure_Modes__c.object-meta.xml
<CustomObject>
    <label>Failure Modes</label>
    <nameField>
        <displayFormat>Failure Mode - {00000000}</displayFormat>
        <label>Failure Modes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failure Modes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>