src/objects/Failure_Modes__c/fields/FAFV_Analysis__c.field-meta.xml
<CustomField>
    <fullName>FAFV_Analysis__c</fullName>
    <label>FV/FA Analysis</label>
    <referenceTo>FA_FV_Analysis__c</referenceTo>
    <relationshipLabel>Failure Modes</relationshipLabel>
    <relationshipName>Failure_Modes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>