src/objects/Failure_Modes__c/fields/FAFVStatus__c.field-meta.xml
<CustomField>
    <fullName>FAFVStatus__c</fullName>
    <formula>TEXT(FAFV_Analysis__r.FA_FV_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAFVStatus</label>
    <type>Text</type>
</CustomField>