src/objects/Failure_Modes__c/fields/Fault_Specification__c.field-meta.xml
<CustomField>
    <fullName>Fault_Specification__c</fullName>
    <label>Fault Specification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PIC_Level_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Degradation</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Optical</fullName>
            </value>
            <value>
                <fullName>Hermetic</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>