src/objects/Failure_Modes__c/fields/PDC_Level_1__c.field-meta.xml
<CustomField>
    <fullName>PDC_Level_1__c</fullName>
    <label>PDC Level 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Site__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10GCDRLDPA</fullName>
            </value>
            <value>
                <fullName>BH1</fullName>
            </value>
            <value>
                <fullName>BH Laser</fullName>
            </value>
            <value>
                <fullName>Breakout</fullName>
            </value>
            <value>
                <fullName>Bulkhead</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Capacitor</fullName>
            </value>
            <value>
                <fullName>Ceramic capacitor</fullName>
            </value>
            <value>
                <fullName>CLEI Label</fullName>
            </value>
            <value>
                <fullName>COF</fullName>
            </value>
            <value>
                <fullName>COF Window</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>DFB25</fullName>
            </value>
            <value>
                <fullName>DFB Laser</fullName>
            </value>
            <value>
                <fullName>EEPROM</fullName>
            </value>
            <value>
                <fullName>EMI Collar</fullName>
            </value>
            <value>
                <fullName>FCC</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Gold Finger</fullName>
            </value>
            <value>
                <fullName>Header pin / Riser board</fullName>
            </value>
            <value>
                <fullName>Heat sink, Lid, Ring Frame</fullName>
            </value>
            <value>
                <fullName>Hotbar</fullName>
            </value>
            <value>
                <fullName>I32X1B</fullName>
                <label>I32X</label>
            </value>
            <value>
                <fullName>ICDR3A</fullName>
                <label>ICDR</label>
            </value>
            <value>
                <fullName>Inductor</fullName>
            </value>
            <value>
                <fullName>Interface board</fullName>
            </value>
            <value>
                <fullName>Isolator</fullName>
            </value>
            <value>
                <fullName>Laser Driver</fullName>
            </value>
            <value>
                <fullName>Leadframe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>