src/objects/Failure_Modes__c/fields/PDC_Level_2__c.field-meta.xml
<CustomField>
    <fullName>PDC_Level_2__c</fullName>
    <label>PDC Level 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PDC_Level_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accuracy</fullName>
            </value>
            <value>
                <fullName>ACF</fullName>
            </value>
            <value>
                <fullName>alignment guide broken</fullName>
            </value>
            <value>
                <fullName>Alignment shift</fullName>
            </value>
            <value>
                <fullName>assembly issue</fullName>
            </value>
            <value>
                <fullName>ATE bug</fullName>
            </value>
            <value>
                <fullName>AWG IL failure</fullName>
            </value>
            <value>
                <fullName>bent pin</fullName>
            </value>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>Breakout fibre damage</fullName>
            </value>
            <value>
                <fullName>Broken/Damage Fiber</fullName>
            </value>
            <value>
                <fullName>Broken/Damage OE Fiber</fullName>
            </value>
            <value>
                <fullName>broken attenuator</fullName>
            </value>
            <value>
                <fullName>broken fiber</fullName>
            </value>
            <value>
                <fullName>broken flex (trace)</fullName>
            </value>
            <value>
                <fullName>broken pigtail</fullName>
            </value>
            <value>
                <fullName>broken ROSA sleeve</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>cable cut off</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Capacitor</fullName>
            </value>
            <value>
                <fullName>capacitor crack</fullName>
            </value>
            <value>
                <fullName>capacitor short</fullName>
            </value>
            <value>
                <fullName>CDR EOS/ESD damage</fullName>
            </value>
            <value>
                <fullName>CDR hard failure</fullName>
            </value>
            <value>
                <fullName>CDR setting issue</fullName>
            </value>
            <value>
                <fullName>CDR switch port sensitivity</fullName>
            </value>
            <value>
                <fullName>CDR weak VCO failure</fullName>
            </value>
            <value>
                <fullName>chip failure</fullName>
            </value>
            <value>
                <fullName>Cold Solder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>