src/objects/Failure_Modes__c/fields/PIC_Level_2__c.field-meta.xml
<CustomField>
    <fullName>PIC_Level_2__c</fullName>
    <label>PIC Level 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PIC_Level_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Active Electronic Components</fullName>
            </value>
            <value>
                <fullName>Adhesive/Epoxy</fullName>
            </value>
            <value>
                <fullName>APD</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Electric / Electronic Assemblies</fullName>
            </value>
            <value>
                <fullName>Feed-Through Hermetic</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>Laser</fullName>
            </value>
            <value>
                <fullName>Laser BH</fullName>
            </value>
            <value>
                <fullName>Laser DFB</fullName>
            </value>
            <value>
                <fullName>Laser FP</fullName>
            </value>
            <value>
                <fullName>Laser VCSEL</fullName>
            </value>
            <value>
                <fullName>LCoS / MEMs</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>MPD</fullName>
            </value>
            <value>
                <fullName>Optical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Passive Electronic Component</fullName>
            </value>
            <value>
                <fullName>PCBA,PCB,Flex</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>TIA</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Build Standard</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Firmware setting</fullName>
            </value>
            <value>
                <fullName>Firmware Version</fullName>
            </value>
            <value>
                <fullName>Product Definition</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>