src/objects/Failure_Modes__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPH</fullName>
            </value>
            <value>
                <fullName>WXI</fullName>
            </value>
            <value>
                <fullName>SNY</fullName>
            </value>
            <value>
                <fullName>SYD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>